adding autoencoder method

--- a/code/ml_experiments/autoencoder/scratch.ipynb
+++ b/code/ml_experiments/autoencoder/scratch.ipynb
@@ -19,7 +19,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import sys\n",
-    "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments/find_sh')\n",
+    "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments')\n",
     "from myPDEFIND import *\n",
     "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/numerics/')\n",
     "import convection_patterns as cp"
@@ -134,9 +134,9 @@
     }
    ],
    "source": [
-    "x_subsample = 8\n",
+    "x_subsample = 8 #SUBSAMPLING FACTORS\n",
     "y_subsample = 8\n",
-    "tt = data['tt'][0][1:]\n",
+    "tt = data['tt'][0][1:] #TVALUES, EXCLUDING FIRST ONE\n",
     "print(\"shape of tt: \",np.shape(tt),\" first element of tt: \",tt[0])\n",
     "xxfull = data['xx']\n",
     "print(\"shape of xxfull: \",np.shape(xxfull))\n",
@@ -147,22 +147,33 @@
     "nxfull = xxfull.size\n",
     "nyfull = yyfull.size\n",
     "Nfull = nxfull*nyfull\n",
-    "xx = xxfull[::x_subsample]\n",
-    "yy = yyfull[::y_subsample]\n",
+    "\n",
+    "#WILL DO EXPERIMENTS ON COARSENED GRIDS\n",
+    "xx = xxfull[::x_subsample] #SUBSAMPLED X\n",
+    "yy = yyfull[::y_subsample] #SUBSAMPLED Y\n",
     "nx = xx.size\n",
     "ny = yy.size\n",
     "N = nx*ny\n",
-    "Ufull = data['uu'][:,:,1:1001]\n",
+    "Ufull = data['uu'][:,:,1:1001] #TAKE LAST 1000 U surfaces\n",
     "dt = data['tt'][0][1]-data['tt'][0][0]\n",
     "print(\"dt: \",dt)\n",
-    "Utfull = BackwardDiff(Ufull,data['uu'][:,:,0:1000],dt)\n",
-    "U = Ufull[:,:,:][::x_subsample,::y_subsample]\n",
+    "Utfull = BackwardDiff(Ufull,data['uu'][:,:,0:1000],dt) #Compute U derivatives\n",
+    "U = Ufull[:,:,:][::x_subsample,::y_subsample] #COURSEN THE SPATIAL GRIDS\n",
     "Ut = Utfull[:,:,:][::x_subsample,::y_subsample]\n",
     "print(\"shape of full U data: \", np.shape(Ufull))\n",
     "print(\"shape of spatially subsampled U data: \",np.shape(U))\n",
-    "training_samples = np.arange(int(.8*n_samples))\n",
-    "val_samples = np.arange(int(.8*n_samples), int(.9*n_samples))\n",
+    "\n",
+    "#NOT RANDOMLY SAMPLING DATA\n",
+    "#training_samples = np.arange(int(.8*n_samples))\n",
+    "#val_samples = np.arange(int(.8*n_samples), int(.9*n_samples))\n",
+    "#test_samples = np.arange(int(.9*n_samples), n_samples)\n",
+    "\n",
+    "#RANDOMLY SAMPLING DATA\n",
+    "perm = np.random.permutation(int(.9*n_samples))\n",
+    "training_samples = perm[:int(.8*n_samples)]\n",
+    "val_samples = perm[int(.8*n_samples):]\n",
     "test_samples = np.arange(int(.9*n_samples), n_samples)\n",
+    "\n",
     "training_data = {'tt': tt[training_samples],\n",
     "                     'xx': xx.T,\n",
     "                     'yy': yy.T,\n",
@@ -177,7 +188,19 @@
     "                 'xx': xx.T,\n",
     "                 'yy': yy.T,\n",
     "                 'U': U[:,:,test_samples].reshape((N,-1)).T,\n",
-    "                 'Ut': Ut[:,:,test_samples].reshape((N,-1)).T}"
+    "                 'Ut': Ut[:,:,test_samples].reshape((N,-1)).T}\n",
+    "\n",
+    "#ToDo: I like the idea of training on course grids. however, i may need to retain full grids for derivative\n",
+    "#calculations, before recoarsening"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Setup model and training parameters"
    ],
    "metadata": {
     "collapsed": false
@@ -187,16 +210,47 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "source": [
+    "params = {}\n",
+    "\n",
+    "params['input_dim'] = training_data['xx'].size*training_data['yy'].size\n",
+    "params['latent_dim'] = 1\n",
+    "params['model_order'] = 1\n",
+    "params['poly_order'] = 3\n",
+    "params['include_sine'] = False\n",
+    "params['library_dim'] = library_size(params['latent_dim'],\n",
+    "                                     params['poly_order'],\n",
+    "                                     params['include_sine'], True)\n",
+    "\n",
+    "# sequential thresholding parameters\n",
+    "params['sequential_thresholding'] = True\n",
+    "params['coefficient_threshold'] = 0.1\n",
+    "params['threshold_frequency'] = 500\n",
+    "params['coefficient_mask'] = np.ones((params['library_dim'], params['latent_dim']))\n",
+    "params['coefficient_initialization'] = 'constant'\n",
+    "\n",
+    "# loss function weighting\n",
+    "params['loss_weight_decoder'] = 1.0\n",
+    "params['loss_weight_sindy_z'] = 0.01\n",
+    "params['loss_weight_sindy_x'] = 0.5\n",
+    "params['loss_weight_sindy_regularization'] = 0.1\n",
+    "\n",
+    "params['activation'] = 'sigmoid'\n",
+    "params['widths'] = [256]\n",
+    "\n",
+    "# training parameters\n",
+    "params['epoch_size'] = training_data['t'].size\n",
+    "params['batch_size'] = 1000\n",
+    "params['learning_rate'] = 1e-3\n",
+    "\n",
+    "params['data_path'] = os.getcwd() + '/'\n",
+    "params['print_progress'] = True\n",
+    "params['print_frequency'] = 100\n",
+    "\n",
+    "# training time cutoffs\n",
+    "params['max_epochs'] = 3001\n",
+    "params['refinement_epochs'] = 1001"
+   ],
    "metadata": {
     "collapsed": false
    }
