--- a/code/ml_experiments/reaction_diffusion_test/rd_test.ipynb
+++ b/code/ml_experiments/reaction_diffusion_test/rd_test.ipynb
@@ -10,7 +10,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
-    "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments/PDEFIND')\n",
+    "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/'\n",
+    "                'ml_experiments/reaction_diffusion_test')\n",
     "from PDE_FIND import *\n",
     "import scipy.io as sio"
    ]
