--- a/code/ml_experiments/autoencoder/scratch.ipynb
+++ b/code/ml_experiments/autoencoder/scratch.ipynb
@@ -18,7 +18,11 @@
     "import scipy.io as sio\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import datetime\n",
+    "import os\n",
     "import sys\n",
+    "import pandas as pd\n",
+    "import tensorflow as tf\n",
     "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments')\n",
     "from myPDEFIND import *\n",
     "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/numerics/')\n",
@@ -190,7 +194,7 @@
     "                 'U': U[:,:,test_samples].reshape((N,-1)).T,\n",
     "                 'Ut': Ut[:,:,test_samples].reshape((N,-1)).T}\n",
     "\n",
-    "#ToDo: I like the idea of training on course grids. however, i may need to retain full grids for derivative\n",
+    "#ToDo: I like the idea of training on coarse grids. however, i may need to retain full grids for derivative\n",
     "#calculations, before recoarsening"
    ],
    "metadata": {
@@ -231,8 +235,8 @@
     "\n",
     "# loss function weighting\n",
     "params['loss_weight_decoder'] = 1.0\n",
-    "params['loss_weight_sindy_z'] = 0.01\n",
-    "params['loss_weight_sindy_x'] = 0.5\n",
+    "params['loss_weight_sindy_z'] = 5e-4\n",
+    "params['loss_weight_sindy_x'] = 5e-5\n",
     "params['loss_weight_sindy_regularization'] = 0.1\n",
     "\n",
     "params['activation'] = 'sigmoid'\n",
@@ -249,7 +253,38 @@
     "\n",
     "# training time cutoffs\n",
     "params['max_epochs'] = 3001\n",
-    "params['refinement_epochs'] = 1001"
+    "params['refinement_epochs'] = 1001\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Run training experiments"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "num_experiments = 10\n",
+    "df = pd.DataFrame()\n",
+    "for i in range(num_experiments):\n",
+    "    print('Experiment %d' % i)\n",
+    "    params['coefficient_mask'] = np.ones((params['library_dim'],params['latent_dim']))\n",
+    "    params['save_name'] = 'sh_'+datetime.datetime.now().strftime(\"%Y_%m_%d_%H_%M_%S_%f\")\n",
+    "    tf.compat.v1.reset_default_graph()\n",
+    "    results_dict = train_network(training_data,val_data,params)\n",
+    "    df = df.append({**results_dict,**params},ignore_index=True)\n",
+    "\n",
+    "df.to_pickle('experiment_results_'+datetime.datetime.now().strftime(\"%Y_%m_%d_%H_%M_%S_%f\")+'.pkl')\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
