--- a/code/ml_experiments/autoencoder/scratch1.ipynb
+++ b/code/ml_experiments/autoencoder/scratch1.ipynb
@@ -25,6 +25,7 @@
     "import tensorflow as tf\n",
     "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments')\n",
     "from myPDEFIND import *\n",
+    "from myAutoEncoder import *\n",
     "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/numerics/')\n",
     "import convection_patterns as cp"
    ],
@@ -219,12 +220,7 @@
     "\n",
     "params['input_dim'] = training_data['xx'].size*training_data['yy'].size\n",
     "params['latent_dim'] = 1\n",
-    "params['model_order'] = 1\n",
-    "params['poly_order'] = 3\n",
-    "params['include_sine'] = False\n",
-    "params['library_dim'] = library_size(params['latent_dim'],\n",
-    "                                     params['poly_order'],\n",
-    "                                     params['include_sine'], True)\n",
+    "params['library_dim'] = library_size(params['latent_dim'])\n",
     "\n",
     "# sequential thresholding parameters\n",
     "params['sequential_thresholding'] = True\n",
