--- a/code/old/scratch1.ipynb
+++ b/code/old/scratch1.ipynb
@@ -153,6 +153,7 @@
     "nyfull = yyfull.size\n",
     "Nfull = nxfull*nyfull\n",
     "\n",
+    "\n",
     "#WILL DO EXPERIMENTS ON COARSENED GRIDS\n",
     "xx = xxfull[::x_subsample] #SUBSAMPLED X\n",
     "yy = yyfull[::y_subsample] #SUBSAMPLED Y\n",
@@ -182,16 +183,19 @@
     "training_data = {'tt': tt[training_samples],\n",
     "                     'xx': xx.T,\n",
     "                     'yy': yy.T,\n",
+    "                     'Ufull': Ufull[:,:,training_samples],\n",
     "                     'U': U[:,:,training_samples].reshape((N,-1)).T,\n",
     "                     'Ut': Ut[:,:,training_samples].reshape((N,-1)).T}\n",
     "val_data = {'tt': tt[val_samples],\n",
     "                'xx': xx.T,\n",
     "                'yy': yy.T,\n",
+    "                'Ufull': Ufull[:,:,val_samples],\n",
     "                'U': U[:,:,val_samples].reshape((N,-1)).T,\n",
     "                'Ut': Ut[:,:,val_samples].reshape((N,-1)).T}\n",
     "test_data = {'tt': tt[test_samples],\n",
     "                 'xx': xx.T,\n",
     "                 'yy': yy.T,\n",
+    "                 'Ufull': Ufull[:,:,test_samples],\n",
     "                 'U': U[:,:,test_samples].reshape((N,-1)).T,\n",
     "                 'Ut': Ut[:,:,test_samples].reshape((N,-1)).T}\n",
     "\n",
@@ -220,36 +224,38 @@
     "\n",
     "params['input_dim'] = training_data['xx'].size*training_data['yy'].size\n",
     "params['latent_dim'] = 1\n",
-    "params['library_dim'] = library_size(params['latent_dim'])\n",
-    "\n",
+    "#integers denote polynomial orders, underscores indicate a derivative\n",
+    "params['lib_form'] = [0,1,2,'_x','_xx','_y','_yy','_xy','_biharmonic']\n",
     "# sequential thresholding parameters\n",
     "params['sequential_thresholding'] = True\n",
     "params['coefficient_threshold'] = 0.1\n",
     "params['threshold_frequency'] = 500\n",
-    "params['coefficient_mask'] = np.ones((params['library_dim'], params['latent_dim']))\n",
+    "params['coefficient_mask'] = np.ones((len(params['lib_form']), params['latent_dim']))\n",
     "params['coefficient_initialization'] = 'constant'\n",
     "\n",
     "# loss function weighting\n",
     "params['loss_weight_decoder'] = 1.0\n",
     "params['loss_weight_sindy_z'] = 5e-4\n",
-    "params['loss_weight_sindy_x'] = 5e-5\n",
+    "params['loss_weight_sindy_U'] = 5e-5\n",
     "params['loss_weight_sindy_regularization'] = 0.1\n",
     "\n",
     "params['activation'] = 'sigmoid'\n",
     "params['widths'] = [256]\n",
+    "params['Lx'] = xxfull[-1]-xxfull[0]\n",
+    "params['Ly'] = yyfull[-1]-yyfull[0]\n",
     "\n",
     "# training parameters\n",
     "params['epoch_size'] = training_data['t'].size\n",
-    "params['batch_size'] = 1000\n",
+    "params['batch_size'] = 10\n",
     "params['learning_rate'] = 1e-3\n",
     "\n",
     "params['data_path'] = os.getcwd() + '/'\n",
     "params['print_progress'] = True\n",
-    "params['print_frequency'] = 100\n",
+    "params['print_frequency'] = 10\n",
     "\n",
     "# training time cutoffs\n",
-    "params['max_epochs'] = 3001\n",
-    "params['refinement_epochs'] = 1001\n"
+    "params['max_epochs'] = 100\n",
+    "params['refinement_epochs'] = 100\n"
    ],
    "metadata": {
     "collapsed": false
@@ -273,7 +279,7 @@
     "df = pd.DataFrame()\n",
     "for i in range(num_experiments):\n",
     "    print('Experiment %d' % i)\n",
-    "    params['coefficient_mask'] = np.ones((params['library_dim'],params['latent_dim']))\n",
+    "    params['coefficient_mask'] = np.ones((len(params['lib_form']),params['latent_dim']))\n",
     "    params['save_name'] = 'sh_'+datetime.datetime.now().strftime(\"%Y_%m_%d_%H_%M_%S_%f\")\n",
     "    tf.compat.v1.reset_default_graph()\n",
     "    results_dict = train_network(training_data,val_data,params)\n",
