--- a/code/ml_experiments/autoencoder/autoencoder_scratch2.ipynb
+++ b/code/ml_experiments/autoencoder/autoencoder_scratch2.ipynb
@@ -22,7 +22,11 @@
     "import matplotlib.pyplot as plt\n",
     "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments')\n",
     "from myPDEFIND import *\n",
-    "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/numerics')\n",
+    "#sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/numerics')\n",
+    "#import convection_patterns as cp\n",
+    "\n",
+    "# cp.solveSH(20*np.pi,20*np.pi,256,256,.1,100,\"SHAutoEncode_2\",Rscale=.5,\n",
+    "#            beta=.45,amplitude=.1,init_flag=1,energy=False)\n",
     "\n",
     "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/SHAutoEncode_2.mat\")\n",
     "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(3,3))\n",
