--- a/code/ml_experiments/find_sh/find_sh_pytst.ipynb
+++ b/code/ml_experiments/find_sh/find_sh_pytst.ipynb
@@ -50,7 +50,12 @@
     "from myPDEFIND import *\n",
     "import math\n",
     "\n",
-    "#data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/SH1.mat\")\n",
+    "# sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/numerics/')\n",
+    "# import convection_patterns as cp\n",
+    "#\n",
+    "# cp.solveSH(25*np.pi,25*np.pi,256,256,.5,100,\"SH1_1\",Rscale=.5,beta=.45,\n",
+    "#            amplitude=.1,init_flag=1,energy=False)\n",
+    "\n",
     "data = sio.loadmat(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/data/SH1_1.mat\")\n",
     "\n",
     "t = data['tt'].T[:,0]\n",
