--- a/code/ml_experiments/autoencoder/autoencoder_scratch.ipynb
+++ b/code/ml_experiments/autoencoder/autoencoder_scratch.ipynb
@@ -30,7 +30,7 @@
     "import matplotlib.pyplot as plt\n",
     "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/ml_experiments')\n",
     "from myPDEFIND import *\n",
-    "sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/numerics')\n",
+    "#sys.path.append('/Users/edwardmcdugald/Research/convection_patterns_wip/code/numerics')\n",
     "import convection_patterns as cp\n",
     "\n",
     "# cp.solveSH(20*np.pi,20*np.pi,256,256,.1,100,\"SHAutoEncode_2\",Rscale=.5,\n",
