--- a/code/ml_experiments/autoencoder/autoencoder_sh_2.ipynb
+++ b/code/ml_experiments/autoencoder/autoencoder_sh_2.ipynb
@@ -143,8 +143,20 @@
     "    squared_difference = tf.square(x_in - x_out)\n",
     "    ae_err = tf.reduce_mean(squared_difference, axis=-1)\n",
     "    z = autoencoder.encoder(x_in).numpy().reshape(32,32)\n",
-    "    z_derivs = BackwardDiff(z[1:len(z)],z[0:len(z)-1],dt)\n",
-    "\n",
+    "    Lx = 2*x[len(x)-1] # Size of enclosing periodic rectangle\n",
+    "    Ly = 2*y[len(y)-1]\n",
+    "    z_for_sindy = z[1:len(z),12:20,12:20]\n",
+    "    z_derivs = BackwardDiff(z[1:len(z),:,:],z[0:len(z)-1,:,:],dt)\n",
+    "    z_x = SpectralDerivs2(z[1:len(z),:,:],Lx,Ly,'x',latent=True)\n",
+    "    z_y = SpectralDerivs2(z[1:len(z),:,:],Lx,Ly,'y',latent=True)\n",
+    "    z_xx = SpectralDerivs2(z[1:len(z),:,:],Lx,Ly,'xx',latent=True)\n",
+    "    z_yy = SpectralDerivs2(z[1:len(z),:,:],Lx,Ly,'yy',latent=True)\n",
+    "    z_xy = SpectralDerivs2(z[1:len(z),:,:],Lx,Ly,'xy',latent=True)\n",
+    "    biharmz = SpectralDerivs2(z[1:len(z),:,:],Lx,Ly,'biharmonic',latent=True)\n",
+    "    #build lib (dimension may be length of z?)\n",
+    "    #run str ridge to get coeffs c\n",
+    "    #compute sindy err = z_derivs - lib*c\n",
+    "    #add this to the error\n",
     "    return tf.reduce_mean(squared_difference, axis=-1)  # Note the `axis=-1`"
    ],
    "metadata": {
@@ -159,7 +171,7 @@
     "\n",
     "autoencoder.compile(optimizer='adam', loss=my_loss_fn)\n",
     "autoencoder.fit(u_train, u_train,\n",
-    "                epochs=10,\n",
+    "                epochs=1,\n",
     "                batch_size=5,\n",
     "                shuffle=True,\n",
     "                validation_data=(u_test, u_test))\n"
