--- a/code/numerics/busse_balloon.ipynb
+++ b/code/numerics/busse_balloon.ipynb
@@ -2,12 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": true
    },
    "outputs": [
     {
@@ -31,9 +28,18 @@
     "fig, ax1 = plt.subplots(nrows=1, ncols=1, figsize=(6,6))\n",
     "ax1.plot(k,k*B)\n",
     "ax1.axhline(y=0, color='r', linestyle='-')\n",
-    "#ax1.axvline(x=0, color='r', linestyle='-')\n",
-    "ax1.grid()"
+    "ax1.grid()\n",
+    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns_wip/figs/writeup/mybb.png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
